--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -99,4 +99,15 @@ body{
     right: 10px;
   }
 }
-
+  /*相册页面样式*/
+#photo #posts .fancybox img{
+  display:inline-block;
+  float:left;
+  margin: 20px;
+  padding: 5px;
+  -webkit-box-shadow: 0 0 14px #cacbcb;
+  width: 300px;
+}
+#photo  #posts p{
+    overflow:auto;
+  }
