--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -43,7 +43,7 @@ body{
   color:#fff;
 }
 
-.bg_content{
+/*.bg_content{
   position: fixed;
   top: 0;
   z-index: -1;
@@ -53,7 +53,55 @@ body{
 #canvas{
   width: 100%;
   height:100%;
+}*/
+#canvas{
+  width: 100%;
+  height:100%;
 }
+.bg_content{
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  margin:0;
+  overflow:hidden;
+  cursor:none;
+  background:black;
+  background:linear-gradient(to bottom,#000000 0%,#5788fe 100%);
+}
+.filter {
+  width:100%;
+  height:100%;
+  position:absolute;
+  top:0;
+  left:0;
+  background:#fe5757;
+  animation:colorChange 30s ease-in-out infinite;
+  animation-fill-mode:both;
+  mix-blend-mode:overlay;
+}
+@keyframes colorChange {
+  0%,100% {
+    opacity:0;
+  }
+  50% {
+    opacity:.9;
+  }
+}
+.landscape {
+   position:absolute;
+   bottom:0px;
+   left:0;
+   width:100%;
+   height:100%;
+   /*background-image:url(https://openclipart.org/image/2400px/svg_to_png/250847/Trees-Landscape-Silhouette.png);
+     */
+   /*background-image:url('http://www.jq22.com/css/img/xkbg.png');*/
+   background-size:1000px 250px;
+   background-repeat:repeat-x;
+   background-position:center bottom;
+ }
 /*将头部背景变为透明*/
 .header{
   background: transparent ;
@@ -111,3 +159,66 @@ body{
 #photo  #posts p{
     overflow:auto;
   }
+
+  /*更新背景*/
+.brand{
+  background : transparent;
+}
+.menu .menu-item a{
+    color: #fff;
+}
+.menu .menu-item a:hover{
+    color :#fe5757;
+    opacity:0.8
+  }
+.site-subtitle{
+  color: #fff;
+}
+.pagination .page-number.current{
+  background :transparent;
+}
+.pagination .prev, .pagination .next, .pagination .page-number{
+  border-top:none;
+}
+.pagination{
+  border-top:none;
+}
+.pagination .prev:hover, .pagination .next:hover, .pagination .page-number:hover{
+  background :#fff;
+  color :#000
+}
+.footer{
+  color :#fff
+}
+.menu .menu-item a:hover{
+  border-bottom-color:#fe5757;
+  opacity :0.8
+}
+.sidebar{
+  background :rgba(255,255,255,0.96);
+  box-shadow none
+}
+.site-description,.site-state-item-count,.site-state-item-name,.sidebar-nav li:hover,.post-toc ol a,.tag-cloud-title{
+  color:#555
+}
+.powered-by a,.theme-info a,.pagination a,.page-archive .archive-page-counter,.posts-collapse .collection-title h2,.category-list-item a,.category-all-title{
+  color:#fff
+}
+#photo #posts .fancybox img{
+    background: #fff;
+    display: inline-block;
+    float: left;
+    margin: 20px;
+    padding: 5px;
+    -webkit-box-shadow:none;
+    width: 300px;
+    border-radius: 5px;
+}
+
+  /*手机尺寸下代码高亮部分修改*/
+@media (max-width: 767px){
+  .post-body .highlight {
+    width: 100%;
+    padding: 0;
+  }
+}
