--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -1,5 +1,3 @@
-// Custom styles.
-// Custom styles.
 /*首页文章阴影样式*/
 body{
   z-index:9;
@@ -30,7 +28,7 @@ body{
   transform: scaleX(1);
 }
 .posts-expand .post-title-link{
-  margin-bottom 20px;
+  margin-bottom:20px;
   display: inline-block;
   position: relative;
   color: #555;
@@ -68,7 +66,7 @@ body{
   overflow:hidden;
   cursor:none;
   background:black;
-  background:linear-gradient(to bottom,#000000 0%,#5788fe 100%);
+  background: linear-gradient(to bottom, #dcdcdc 0%, palevioletred 100%);
 }
 .filter {
   width:100%;
@@ -89,19 +87,7 @@ body{
     opacity:.9;
   }
 }
-.landscape {
-   position:absolute;
-   bottom:0px;
-   left:0;
-   width:100%;
-   height:100%;
-   /*background-image:url(https://openclipart.org/image/2400px/svg_to_png/250847/Trees-Landscape-Silhouette.png);
-     */
-   /*background-image:url('http://www.jq22.com/css/img/xkbg.png');*/
-   background-size:1000px 250px;
-   background-repeat:repeat-x;
-   background-position:center bottom;
- }
+
 /*将头部背景变为透明*/
 .header{
   background: transparent ;
@@ -116,8 +102,6 @@ body{
   display: block;
   margin: 15px auto;
   /*padding: $site-author-image-padding;*/
-  max-width: $site-author-image-width;
-  height: $site-author-image-height;
   /*
   border: $site-author-image-border-width solid $site-author-image-border-color;
   */
@@ -174,6 +158,9 @@ body{
 .site-subtitle{
   color: #fff;
 }
+.a:hover{
+  color :#fe5757;
+}
 .pagination .page-number.current{
   background :transparent;
 }
@@ -196,7 +183,7 @@ body{
 }
 .sidebar{
   background :rgba(255,255,255,0.96);
-  box-shadow none
+  box-shadow :none
 }
 .site-description,.site-state-item-count,.site-state-item-name,.sidebar-nav li:hover,.post-toc ol a,.tag-cloud-title{
   color:#555
@@ -222,3 +209,32 @@ body{
     padding: 0;
   }
 }
+
+.headband{
+  height: 0;
+}
+.btn:hover, .post-button .btn:hover{
+  border-color: #e5a2b4;
+  background: #e5a2b4;
+  color: white;
+}
+.btn:hover, .post-button .btn{
+  border-color: #e5a2b4;
+  background: #fff;
+  color: #e5a2b4;
+}
+.post-button .btn{
+  color: #e5a2b4;
+  font-size: 14px;
+  background: #fff;
+  border-radius: 0;
+  line-height: 2;
+  margin: 7px 4px -1px 4px;
+}
+.category-all-page .category-list-count{
+  color: #fff;
+}
+.page-archive .posts-collapse .archive-move-on,.posts-collapse .collection-title::before{
+  background: #fff;
+}
+
