--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -248,3 +248,9 @@ body{
     border-radius: 5px;
   }
 }
+@media (max-width: 767px){
+  .post-body .highlight {
+    width: 124%;
+    padding: 0;
+  }
+}
