--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -78,6 +78,7 @@ body{
   animation:colorChange 30s ease-in-out infinite;
   animation-fill-mode:both;
   mix-blend-mode:overlay;
+  z-index: -1;
 }
 @keyframes colorChange {
   0%,100% {
